@@ -3,6 +3,7 @@
 	  cross-site request forgery vulnerabilities
 	- URL change: /u/logout => /u$id/logout
 	- Bugfix: delete/update all references when deleting a user
+	- Optimized random screenshot fetching query
 
 2.12 - 2010-11-03
 	- !scr command for Multi::IRC
